--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,8 @@
         "no-param-reassign": 0,
         "no-useless-escape": 0,
         "no-useless-return": 0,
-        "no-else-return": 0
+        "no-else-return": 0,
+        "no-return-assign": 0
     },
     "env": {
         "browser": true,
